<resources>
    <string name="app_name">Tradealizer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="kosten_string">Kosten</string>
    <string name="beschreibung_string">Beschreibung</string>
    <string name="datum_string">Datum</string>
    <string name="kostenart_string">Kostenart</string>
    <string name="art_string">Art</string>
    <string name="ort_string">Ort</string>
    <string name="adresse_string">Adresse</string>
    <string name="person_string">Person</string>

    <string-array name="dialog_spinner_kostenart">
        <item>Bargeld</item>
        <item>Kreditkarte</item>
        <item>Bankomatkarte</item>
        <item>Scheck</item>
        <item>Essensmarken</item>
        <item>Gold</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
